// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`setStoneAsPassed.contemplation given: [case1] a peer reviewer that always hands back a blocker, with budget to spare when: [t0] the first round is entered, with no debt owed then: matches snapshot — the round that was allowed to run 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = blockers found
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      ├─ reviews
      │   └─ r1: counter (l1, 1/5)
      │       ├─ rejected <elapsed>
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.counter.md
      │       └─ taken: .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.counter.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers found"
              ├─ finished <elapsed> ✗
              └─ reason: blockers found"
`;

exports[`setStoneAsPassed.contemplation given: [case1] a peer reviewer that always hands back a blocker, with budget to spare when: [t1] the driver edits the artifact and re-enters, with no answer written then: matches snapshot — the carried-unanswered halt, rendered in full 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = counter
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.given.by_peer.counter.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.test._.review.i001.<hash>.r001._.taken.by_self.counter.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.test --as contemplated --that counter"
`;

exports[`setStoneAsPassed.contemplation given: [case1] a peer reviewer that always hands back a blocker, with budget to spare when: [t2] the driver answers, then re-enters then: matches snapshot — the gate open again, after the answer 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.test
   ├─ passage = blocked
   ├─ reason = blockers found
   └─ guard
      ├─ artifacts
      │   └─ $route/1.test*.md
      ├─ reviews
      │   └─ r1: counter (l1, 2/5)
      │       ├─ rejected <elapsed>
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.test._.review.i002.<hash>.r001._.given.by_peer.counter.md
      │       └─ taken: .reviews/peer/1.test._.review.i002.<hash>.r001._.taken.by_self.counter.md
      └─ judges
          └─ j1: echo "passed: false\\nreason: blockers found"
              ├─ finished <elapsed> ✗
              └─ reason: blockers found"
`;
